# context-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/api/: adapter_implementation_guides.md  context_aware_data_structure_api.md  store_backends_api.md
docs/deployment/: library_release_instructions.md
docs/design/: adapter_design_decisions.md  architecture.md  hpc_considerations.md  sequence_diagrams.md
docs/examples/: advanced_adapter_examples.md  performance_benchmarks.md  quick_start_tutorial.md
docs/requirements/: functional_requirements.md  nonfunctional_requirements.md  use_cases.md
docs/security/: compliance_notes.md
docs/test/: testing_plan.md
src/context_framework/: context_aware_data_structure.py  context_store.py  exceptions.py  in_memory_context_store.py  init.py
src/context_framework/adapters/: __init__.py  base_adapter.py  pandas_adapter.py
tests/: test_in_memory_store.py  test_pandas_adapter.py
