[tool.poetry]
name = "context-framework"
version = "0.1.0"
description = "A library for attaching, managing, and retrieving context metadata for data structures."
authors = ["Akira Nishii <akira.nishii@thera-ai.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thera-core/context-framework"
repository = "https://github.com/thera-core/context-framework"
documentation = "https://github.com/thera-core/context-framework/tree/main/docs"
keywords = ["metadata", "context", "pandas", "redis", "framework"]

[tool.poetry.dependencies]
python = ">=3.8"
typing-extensions = "^4.0.0"
pandas = { version = ">=1.0.0", optional = true }
redis = { version = ">=4.0.0", optional = true }
sqlalchemy = { version = ">=1.4.0", optional = true }

[tool.poetry.extras]
pandas = ["pandas"]
redis = ["redis"]
database = ["sqlalchemy"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
